<resources>
    <string name="app_name">Login Page</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone_number_or_email">Phone number or email</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="by_continuing_you_agree_to_the_amazon_s">By continuing you agree to the Amazon\'s</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="new_here">New here?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="full_name">Full Name</string>
</resources>